Add native timeout support to MongoHealthIndicator